@@ -1,5 +1,7 @@
 Revision history for RepoUpdater
 
+        Added new methods - current_path and all_paths.
+        Updated u-r to use new methods.
 0.01    Wed Nov 25 2009
         First version, released on an unsuspecting world.
 
